jenkins/podsecurity.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/part-of: jenkins
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
